--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ zm16591 まつざき　みなみ
     
     <script src="myjs.js"></script>
     <div id="header"></div>
- <img src="./image/joosai.jpg">
+ <img src="./image/josai.png">
 
     <dl>
       <dl>メンバー（3年生）</dl>
